--- a/index.html
+++ b/index.html
@@ -888,7 +888,8 @@
 
 		function startApp() {
 			//var crappyBirdAddress = "0x77b0AB154BC318A2Ff9F6f40Af365Ef3C4d630Fa";
-			var crappyBirdAddress = "0x6E6F40F2aC5783b82495086317dD900217d83Ff2";
+			//var crappyBirdAddress = "0x6E6F40F2aC5783b82495086317dD900217d83Ff2";
+			var crappyBirdAddress = "0x7e21d4D746Ee9C41797C27190746186b6e109cDe";
         		crappyBird = new web3js.eth.Contract(CrappyBirdABI, crappyBirdAddress);
 			userAccount = web3.currentProvider.selectedAddress;
 			console.log("userAccount = " + userAccount);
